--- a/STest.App/STest.App/MainWindow.xaml
+++ b/STest.App/STest.App/MainWindow.xaml
@@ -66,7 +66,7 @@
 
             <NavigationView.FooterMenuItems>
                 <NavigationViewItem 
-                    Content="Account" 
+                    Content="Profile" 
                     Tag="Account" 
                     Icon="Contact"
                     Background="Transparent"
