--- a/STest.App/STest.App/Pages/Builder/BuilderPage.xaml
+++ b/STest.App/STest.App/Pages/Builder/BuilderPage.xaml
@@ -4,19 +4,95 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:STest.App.Pages.Builder"
+    xmlns:controls="using:STest.App.Controls"
     xmlns:testing="using:STLib.Core.Testing"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="Transparent">
-    <!--xmlns:testing="clr-namespace:STLib.Core.Testing;assembly=STLib;"-->
+    <Page.Resources>
+        <Storyboard x:Key="FadeInAnimation">
+            <DoubleAnimation 
+                Storyboard.TargetProperty="Opacity"       
+                From="0" 
+                To="1" 
+                Duration="0:0:0.5"
+            />
+        </Storyboard>
+        <Storyboard x:Key="FadeOutAnimation">
+            <DoubleAnimation 
+                Storyboard.TargetProperty="Opacity"       
+                From="1" 
+                To="0" 
+                Duration="0:0:0.5"
+            />
+        </Storyboard>
+        <DataTemplate 
+            x:Key="TestsListViewTemplate" 
+            x:DataType="testing:Test"
+        >
+            <controls:ConfirmationButton 
+                Margin="0, 0, 8, 15"
+                Padding="15"
+                ToolTipService.ToolTip="{x:Bind Name}"
+                Tag="{x:Bind TestID}"
+                BorderThickness="1"
+                CornerRadius="{StaticResource OverlayCornerRadius}"
+                BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+            >
+                <StackPanel>
+                    <TextBlock 
+                        Text="{x:Bind TrimToLength(Name, 24)}" 
+                        FontFamily="{StaticResource Montserrat}"
+                        Style="{StaticResource BodyStrongTextBlockStyle}"
+                        HorizontalAlignment="Left"
+                        Margin="0, 0, 0, 5"
+                    />
+                    <TextBlock 
+                        Text="{x:Bind TrimToLength(Description, 32)}" 
+                        FontFamily="{StaticResource Montserrat}"
+                        Style="{StaticResource BodyTextBlockStyle}"
+                        HorizontalAlignment="Left"
+                        Margin="0, 0, 0, 20"
+                    />
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="20" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock 
+                            Grid.Column="0"
+                            Grid.Row="0"
+                            Text="{x:Bind ToLocalDate(LastModified)}" 
+                            FontFamily="{StaticResource Montserrat}"
+                            Style="{StaticResource CaptionTextBlockStyle}"
+                            Foreground="{ThemeResource TextFillColorSecondaryBrush}"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"
+                            Margin="0, 0, 20, 0"
+                        />
+                        <FontIcon 
+                            Grid.Column="1"
+                            Grid.Row="0"
+                            Glyph="&#xE8A7;" 
+                            FontSize="14"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                        />
+                    </Grid>
+                </StackPanel>
+            </controls:ConfirmationButton>
+        </DataTemplate>
+    </Page.Resources>
+    
     <Grid>
         <ScrollViewer VerticalScrollBarVisibility="Auto">
             <StackPanel>
                 <ListView 
                     ItemsSource="{x:Bind TestsList}"
-                    Padding="0,15,0,15"
+                    Margin="15, 15, 0, 0"
                     SelectionMode="None"
+                    ItemTemplate="{StaticResource TestsListViewTemplate}"
                     ScrollViewer.HorizontalScrollMode="Enabled"
                     ScrollViewer.VerticalScrollMode="Disabled"
                     ScrollViewer.HorizontalScrollBarVisibility="Hidden"
@@ -27,42 +103,111 @@
                             <StackPanel Orientation="Horizontal" />
                         </ItemsPanelTemplate>
                     </ListView.ItemsPanel>
-                    <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="testing:Test">
-                            <Button  
-                                Margin="0"
-                                Padding="20"
-                                BorderThickness="1"
-                                CornerRadius="{StaticResource OverlayCornerRadius}"
-                                BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
-                            >
-                                <StackPanel>
-                                    <TextBlock 
-                                        Text="{x:Bind Name}" 
-                                        FontFamily="{StaticResource Montserrat}"
-                                        Style="{StaticResource BodyStrongTextBlockStyle}"
-                                        HorizontalAlignment="Center"
-                                    />
-                                    <TextBlock 
-                                        Text="{x:Bind Description}" 
-                                        FontFamily="{StaticResource Montserrat}"
-                                        Style="{StaticResource BodyTextBlockStyle}"
-                                        Foreground="{ThemeResource TextFillColorSecondaryBrush}"
-                                        HorizontalAlignment="Left"
-                                    />
-                                    <TextBlock 
-                                        Text="{x:Bind ToLocalDate(LastModified)}" 
-                                        FontFamily="{StaticResource Montserrat}"
-                                        Style="{StaticResource BodyTextBlockStyle}"
-                                        Foreground="{ThemeResource TextFillColorSecondaryBrush}"
-                                        HorizontalAlignment="Left"
-                                    />
-                                </StackPanel>
-                            </Button>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="Margin" Value="0" />
+                            <Setter Property="Padding" Value="0" />
+                        </Style>
+                    </ListView.ItemContainerStyle>
                 </ListView>
+                <controls:ConfirmationButton 
+                    x:Name="EmptyTestsListButton"
+                    Click="EmptyTestsListButtonClick"
+                    Margin="15, 0, 8, 15"
+                    Padding="15"
+                    ToolTipService.ToolTip="Create new test"
+                    BorderThickness="1"
+                    CornerRadius="{StaticResource OverlayCornerRadius}"
+                    BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                    Visibility="Collapsed"
+                >
+                    <StackPanel>
+                        <TextBlock 
+                            x:Name="EmptyTestsListTitle"
+                            FontFamily="{StaticResource Montserrat}"
+                            Style="{StaticResource BodyStrongTextBlockStyle}"
+                            HorizontalAlignment="Left"
+                            Margin="0, 0, 0, 5"
+                        />
+                        <TextBlock 
+                            x:Name="EmptyTestsListDescription"
+                            FontFamily="{StaticResource Montserrat}"
+                            Style="{StaticResource BodyTextBlockStyle}"
+                            HorizontalAlignment="Left"
+                            Margin="0, 0, 0, 20"
+                        />
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <FontIcon 
+                                Grid.Column="1"
+                                Grid.Row="0"
+                                Glyph="&#xE8A7;" 
+                                FontSize="14"
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Center"
+                            />
+                        </Grid>
+                    </StackPanel>
+                </controls:ConfirmationButton>
+                <Border 
+                    Margin="15, 0, 15, 15"
+                    BorderBrush="{StaticResource CardStrokeColorDefaultBrush}"
+                    BorderThickness="0, 0, 0, 1"
+                />
 
+                <Border 
+                    x:Name="TestBuilderBorder"
+                    Margin="15, 0, 15, 15"
+                    Padding="15"
+                    RenderTransformOrigin="0.5,0.5"
+                    Visibility="Collapsed"
+                    BorderThickness="1"
+                    BorderBrush="{StaticResource CardStrokeColorDefaultBrush}"
+                    CornerRadius="{StaticResource OverlayCornerRadius}"
+                    Background="{StaticResource LayerOnAcrylicFillColorDefaultBrush}"
+                >
+                    <StackPanel>
+                        <TextBlock 
+                            x:Name="TestsBuilderTitle"
+                            FontFamily="{StaticResource Montserrat}"
+                            Style="{StaticResource TitleTextBlockStyle}"
+                            Foreground="{ThemeResource AccentTextFillColorSecondaryBrush}"
+                            HorizontalAlignment="Center"
+                        />
+                        <TextBox 
+                            x:Name="TestsBuilderName"
+                            FontFamily="{StaticResource Montserrat}"
+                            HorizontalAlignment="Left"
+                            Margin="0, 0, 0, 20"
+                            Width="250"
+                        />
+                        <TextBox 
+                            x:Name="TestsBuilderDescription"
+                            FontFamily="{StaticResource Montserrat}"
+                            HorizontalAlignment="Left"
+                            Margin="0, 0, 0, 20"
+                            Width="250"
+                        />
+                        <RichEditBox 
+                            x:Name="TestsBuilderInstructions"
+                            Width="500" 
+                            MinHeight="100"
+                            FontFamily="{StaticResource Montserrat}"
+                            HorizontalAlignment="Left"
+                            Margin="0, 0, 0, 20"
+                        />
+                        <TimePicker 
+                            x:Name="TestsBuilderTime"
+                            ClockIdentifier="24HourClock" 
+                            HorizontalAlignment="Left"
+                            Margin="0, 0, 0, 20"
+                        />
+
+
+                    </StackPanel>
+                </Border>
 
             </StackPanel>
         </ScrollViewer>
