--- a/STest.App/STest.App/Pages/Settings/SettingsPage.xaml
+++ b/STest.App/STest.App/Pages/Settings/SettingsPage.xaml
@@ -46,12 +46,18 @@
                     />
                     <controls:ConfirmationButton
                         Click="CopyToClipboardButtonClick"
-                        Content="&#xE8C8;"
                         Tag="{x:Bind Item.Value}" 
                         ToolTipService.ToolTip="Copy to clipboard"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Center"
-                    />
+                    >
+                        <FontIcon 
+                            Glyph="&#xE8C8;" 
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Center"
+                            FontSize="16"
+                        />
+                    </controls:ConfirmationButton>
                 </StackPanel>
             </StackPanel>
         </DataTemplate>
@@ -62,7 +68,6 @@
             <StackPanel>
                 <TextBlock 
                     x:Name="TitleText"
-                    FontFamily="{StaticResource Montserrat}"
                     Style="{StaticResource TitleTextBlockStyle}"
                     Foreground="{ThemeResource AccentTextFillColorSecondaryBrush}"
                     HorizontalAlignment="Center"
@@ -77,7 +82,6 @@
                         x:Name="LanguageText"
                         Style="{StaticResource SubtitleTextBlockStyle}"
                         Foreground="{ThemeResource AccentTextFillColorSecondaryBrush}"
-                        FontFamily="{StaticResource Montserrat}"
                         FontWeight="Normal"
                         VerticalAlignment="Center"
                         HorizontalAlignment="Center"
@@ -86,7 +90,6 @@
                         x:Name="LanguageDropDown"
                         VerticalAlignment="Center"
                         HorizontalAlignment="Center"
-                        FontFamily="{StaticResource Montserrat}"
                         Margin="20, 0, 0, 0"
                     />
                 </StackPanel>
@@ -124,7 +127,6 @@
                                 <TextBlock 
                                     Text="Debug dashboard"
                                     Style="{StaticResource SubtitleTextBlockStyle}"
-                                    FontFamily="{StaticResource Montserrat}"
                                     FontWeight="Medium"
                                     VerticalAlignment="Center"
                                     HorizontalAlignment="Left"
@@ -195,7 +197,6 @@
                                     Text="Clear console"
                                     ToolTipService.ToolTip="Clear console"
                                     Style="{StaticResource BodyStrongTextBlockStyle}"
-                                    FontFamily="{StaticResource Montserrat}"
                                     VerticalAlignment="Center"
                                     HorizontalAlignment="Center"
                                     Margin="15, 0, 0, 0"
